# bataillenavale

./: .gitignore  README.md
app/: CMakeLists.txt  main.c
libs/lib_display/: CMakeLists.txt  README.md  library.c  library.h
libs/lib_model/: .gitignore  CMakeLists.txt  README.md  library.c  library.h
libs/lib_model/grid_case/: grid_case.c  grid_case.h
libs/lib_model/list_of_ships/: list_of_ships.c  list_of_ships.h
